--- a/jfs131.Rmd
+++ b/jfs131.Rmd
@@ -1,15 +1,12 @@
 ---
-title: "植生被度階級データのモデリング"
+title: "植生被度階級データの<br />モデリング"
 author: "伊東宏樹"
 date: "2020-03-27"
 institute: "森林総合研究所北海道支所"
 output:
-  beamer_presentation:
-    latex_engine: lualatex
-    theme: metropolis
-    keep_tex: true
-    includes:
-      in_header: header.tex
+  revealjs::revealjs_presentation:
+    theme: white
+    transition: slide
 ---
 
 ```{r setup, include=FALSE}
@@ -18,31 +15,42 @@ library(extraDistr)
 library(ggplot2)
 library(ggthemes)
 library(rstan)
-options(mc.cores = parallel::detectCores())
-rstan_options(auto_write = TRUE)
+library(cmdstanr)
+Sys.setenv(PATH = "/usr/bin:/bin")
+set_cmdstan_path("/usr/local/cmdstan")
+library(bayesplot)
 ```
 
 # はじめに
 
 ## 被度階級データ
 
-- 目視で測定されることが多い。
+- 被度（調査面積に対する対象植物の被覆度）は、もともとは0〜1の範囲の連続値。
+- 実際には、{'+', '0', '1', '2', '3', '4', '5'}といった階級データとして記録されることが多い。
+- また、測定値は目視で決められることが多い。
 
+## 被度階級データの問題点
 
-## ベータ分布
+- 順序尺度データなので、数値的な取り扱いが簡単ではない。
+- 測定誤差の問題。
 
-```{r cover_prob_func, include=FALSE}
-cover_prob <- function(cover, cut_points, a, b) {
-  n <- length(cut_points)
-  pr <- rep(0, n + 1)
-  pr[1] <- pbeta(cut_points[1], a, b)
-  for (k in 2:n)
-    pr[k] <- pbeta(cut_points[k], a, b) -
-             pbeta(cut_points[k - 1], a, b)
-  pr[n + 1] <- 1 - pbeta(cut_points[n], a, b)
-  return(pr)
-}
-```
+## 被度（連続値）のモデリング
+
+0〜1の連続値をとるので、ベータ分布にあてはめるのは自然な発想。
+
+$$
+y \sim \mathrm{Beta}(\alpha, \beta)
+$$
+
+<p style="height:1em;"></p>
+
+平均$\mu$を使ったパラメータ化
+
+$$
+y \sim \mathrm{Beta}\left(\frac{\mu}{\delta}-\mu,\frac{(1-\mu)(1-\delta)}{\delta}\right)
+$$
+
+## ベータ分布(mu=0.6のとき) {#beta_distribution}
 
 ```{r plot_beta_distribution, echo=FALSE, warning=FALSE}
 p <- 0.6
@@ -59,21 +67,335 @@ df <- data.frame(Cover = x,
                  delta = factor(rep(delta, each = length(x))))
 colors <- colorblind_pal()(8)[c(7, 6, 3, 2, 4)]
 ggplot(df, aes(x = Cover, y = Density, color = delta)) +
-  geom_line(size = 1, alpha = 0.9) +
+  geom_line(size = 2, alpha = 0.9) +
   scale_color_manual(values = colors) +
 #  annotate("text", x = 0, y = 24, hjust = 0,
 #           label = "mu=0.6", color = "black") +
-  annotate("text", x = 0.625, y = 20, hjust = 0, size = 3,
+  annotate("text", x = 0.625, y = 20, hjust = 0, size = 6,
            label = bquote(delta == .(delta[1])), color = colors[1]) +
-  annotate("text", x = 0.65, y = 6.5, hjust = 0, size = 3,
+  annotate("text", x = 0.65, y = 6.5, hjust = 0, size = 6,
            label = bquote(delta == .(delta[2])), color = colors[2]) +
-  annotate("text", x = 0.68, y = 3.2, hjust = 0, size = 3,
+  annotate("text", x = 0.68, y = 3.2, hjust = 0, size = 6,
            label = bquote(delta == .(delta[3])), color = colors[3]) +
-  annotate("text", x = 0.8, y = 2.35, hjust = 0, size = 3,
+  annotate("text", x = 0.8, y = 2.35, hjust = 0, size = 6,
            label = bquote(delta == .(delta[4])), color = colors[4]) +
-  annotate("text", x = 1, y = 10, hjust = 1, size = 3,
+  annotate("text", x = 1, y = 10, hjust = 1, size = 6,
            label = bquote(delta == .(delta[5])), color = colors[5]) +
-  theme_gray(base_family = "Helvetica", base_size = 18) +
-  theme(legend.position = "none",
-        plot.background = element_rect(fill = "transparent", color = NA))
+  theme_gray(base_family = "Helvetica", base_size = 24) +
+  theme(legend.position = "none")
+```
+
+## Changing delta
+
+```{r gen_sim_data, include=FALSE}
+cover_prob <- function(cover, cut_points, a, b) {
+  n <- length(cut_points)
+  pr <- rep(0, n + 1)
+  pr[1] <- pbeta(cut_points[1], a, b)
+  for (k in 2:n)
+    pr[k] <- pbeta(cut_points[k], a, b) -
+             pbeta(cut_points[k - 1], a, b)
+  pr[n + 1] <- 1 - pbeta(cut_points[n], a, b)
+  return(pr)
+}
+
+sim_cover_prob <- function(delta = c(0.001, 0.01, 0.05, 0.1),
+                           cut_points = c(0.01, 0.1, 0.25, 0.5, 0.75)) {
+  # delta: intra-quadrat correlation in Damgaard (2014)
+  #        also can be regarded as uncertainty in classification
+  # cut_points : cut points of the cover classes
+
+  n <- length(cut_points)
+  nk <- length(cut_points)
+  q <- seq(0.0001, 1 - 0.0001, length = 300)
+  p <- sapply(delta, function(d) {
+    a <- q / d - q
+    b <- (1 - q) * (1 - d) / d
+    pr <- sapply(seq_along(q),
+                 function(i) cover_prob(q[i], cut_points, a[i], b[i]))
+  })
+  df <- data.frame(delta = rep(paste0("δ=", delta), each = length(q) * (nk + 1)),
+                   Cover = rep(rep(q, each = nk + 1), length(delta)),
+                   Probability = c(p),
+                   Class = factor(rep(rep(1:(nk + 1), length(q)), length(delta))))
+  plt <- ggplot(df) +
+    geom_vline(xintercept = cut_points, color = "red", size = 0.33, linetype = 2) +
+    geom_line(aes(x = Cover, y = Probability, color = Class), size = 0.67) +
+    scale_color_manual(values = colorblind_pal()(8)[c(1, 2, 3, 4, 6, 7)]) +
+    facet_wrap(~delta) +
+    theme_bw()
+  print(plt)
+}
+```
+
+## Classes
+
+Class definition
+
+1: 0–0.01 (including 0), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
+
+
+## $\delta$=0.001
+```{r delta=0.001, echo=FALSE}
+sim_cover_prob(delta = 0.001)
+```
+
+## $\delta$=0.01
+```{r delta=0.01, echo=FALSE}
+sim_cover_prob(delta = 0.01)
+```
+
+## $\delta$=0.05
+```{r delta=0.05, echo=FALSE}
+sim_cover_prob(delta = 0.05)
+```
+
+## $\delta$=0.1
+```{r delta=0.1, echo=FALSE}
+sim_cover_prob(delta = 0.1)
+```
+
+## $\delta$=0.2
+```{r delta=0.2, echo=FALSE}
+sim_cover_prob(delta = 0.2)
+```
+
+## $\delta$=0.4
+```{r delta=0.4, echo=FALSE}
+sim_cover_prob(delta = 0.4)
+```
+
+# Modeling
+
+## Simulated data
+
+```{r sim1_datagen, include=FALSE}
+cover_class <- function(q, delta = 0.1, N = 1,
+                        cp = c(0.01, 0.1, 0.25, 0.5, 0.75)) {
+  nk <- length(cp)
+  pr <- rep(0, nk + 1)
+  a <- q / delta - q
+  b <- (1 - q) * (1 - delta) / delta
+  pr[1] <- pbeta(cp[1], a, b)
+  for (k in 2:nk)
+    pr[k] <- pbeta(cp[k], a, b) - pbeta(cp[k - 1], a, b)
+  pr[nk + 1] <- 1 - pbeta(cp[nk], a, b)
+  rcat(N, pr)
+}
+
+
+N <- 10
+k <- c(0.01, 0.1, 0.25, 0.5, 0.75)
+p <- 0.6
+delta <- 0.05
+
+set.seed(1234)
+y <- cover_class(p, delta, N)
+```
+
+Data
+
+- true cover = 0.6
+- set delta = 0.05
+- 10 times measurements
+
+```{r print_sim1, echo=FALSE}
+print(y)
+```
+
+## Stan code 1 (functions block)
+
+```
+functions {
+  real coverclass_lpmf(int Y, vector CP, real a, real b) {
+    int n_cls;
+    real gamma;
+
+    n_cls = num_elements(CP) + 1;
+    if (Y <= 1) {  // 0 or 1
+      gamma =  inc_beta(a, b, CP[1]);
+    } else if(Y >= 2 && Y < n_cls) {
+      gamma = inc_beta(a, b, CP[Y])
+              - inc_beta(a, b, CP[Y - 1]);
+    } else {
+      gamma = 1 - inc_beta(a, b, CP[n_cls - 1]);
+    }
+    return bernoulli_lpmf(1 | gamma);
+  }
+}
+```
+
+## Stan code 2 (model block)
+
+```
+model {
+  // Observation model
+  {
+    real a = p / delta - p;
+    real b = (1 - p) * (1 - delta) / delta;
+
+    for (n in 1:N)
+      Y[n] ~ coverclass(CP, a, b);
+  }
+}
+```
+
+In `transformed parameters` block,
+
+`p = inv_logit(beta + beta_x * x + ...)`
+
+## Fit to the model
+
+```{r sim1_fit, include=FALSE, cache=TRUE}
+data <- list(N_cls = length(k) + 1,
+             N = N,
+             Y = y,
+             CP = k)
+model <- cmdstan_model("cover.stan")
+fit <- model$sample(data = data,
+                    num_chains = 4, num_cores = 4,
+                    num_samples = 1000, num_warmup = 1000)
+fit1 <- rstan::read_stan_csv(fit$output_files())
+
+```
+
+## Posterior summary
+
+```{r sim1_summary}
+print(fit1, pars = c("p", "delta"))
+```
+
+## Posterior predictive check
+
+```{r sim1_ppc, echo=FALSE}
+yrep <-  extract(fit1, pars = "yrep")[["yrep"]]
+pp_check(y, yrep, ppc_rootogram)
+```
+
+## Zero-inflation
+
+Class definition in this model
+
+0: 0, 
+1: 0–0.01 (excluding 0), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
+
+Constant cover for all quadrats excluding 0
+
+```{r zi_datagen, echo=FALSE}
+N <- 100
+k <- c(0.01, 0.1, 0.25, 0.5, 0.75)
+p <- 0.05
+delta <- 0.1
+omega <- 0.8  # proportion on non-zero
+
+set.seed(1234)
+y <- cover_class(p, delta, N)
+y[sample(1:N, (1 - omega) * N)] <- 0
+print(y)
+```
+
+## View data
+
+```{r zi_view, echo=FALSE}
+df <- data.frame(y = y)
+ggplot(df) +
+  geom_bar(aes(x = y))
+```
+
+## Stan code
+
+```
+model {
+  // Observation model
+  {
+    real a = p / delta - p;
+    real b = (1 - p) * (1 - delta) / delta;
+  
+    for (n in 1:N) {
+      if (Y[n] == 0) {
+        0 ~ bernoulli(omega);
+      } else {
+        1 ~ bernoulli(omega);
+        Y[n] ~ coverclass(CP, a, b);
+      }
+    }
+  }
+}
+```
+
+## Fitting
+
+```{r zi_fitting, include=FALSE, cache=TRUE}
+data <- list(N_cls = length(k) + 1,
+             N = N,
+             Y = y,
+             CP = k)
+model <- cmdstan_model("zicover.stan")
+fit <- model$sample(data = data,
+                    num_chains = 4, num_cores = 4,
+                    num_samples = 1000, num_warmup = 1000)
+fit2 <- rstan::read_stan_csv(fit$output_files())
+```
+
+## Posterior summary
+
+```{r}
+print(fit2, pars = c("p", "delta", "omega"))
+```
+
+## Zero-inflation 2
+
+```{r zi2_datagen}
+N <- 100
+k <- c(0.01, 0.1, 0.25, 0.5, 0.75)
+p <- 0.05
+delta <- 0.1
+omega <- 0.8  # proportion on non-zero
+psi <- 0.67   # detection prob. for class 1
+
+set.seed(1234)
+y <- rep(0, N)
+for (i in 1:N) {
+  if (runif(1, 0, 1) < omega) {
+    y[i] <- cover_class(p, delta)
+    if (y[i] == 1 & runif(1, 0, 1) > psi)
+      y[i] <- 0
+  }
+}
+print(y)
+```
+
+## View data
+
+```{r zi2_view, echo=FALSE}
+df <- data.frame(y = y)
+ggplot(df) +
+  geom_bar(aes(x = y))
+```
+
+## Fitting
+
+```{r zi2_fitting, include=FALSE, cache=TRUE}
+data <- list(N_cls = length(k) + 1,
+             N = N,
+             Y = y,
+             CP = k)
+model <- cmdstan_model("zicover2.stan")
+fit <- model$sample(data = data,
+                    num_chains = 4, num_cores = 4,
+                    num_samples = 1000, num_warmup = 1000)
+fit3 <- rstan::read_stan_csv(fit$output_files())
+```
+
+## Summary
+
+```{r}
+print(fit3, pars = c("p", "delta", "omega", "psi"))
+```
+
+## PPC
+
+```{r zi2_ppc, echo=FALSE}
+yrep <-  extract(fit2, pars = "yrep")[["yrep"]]
+pp_check(y, yrep, ppc_rootogram)
 ```
