--- a/jfs131.Rmd
+++ b/jfs131.Rmd
@@ -281,19 +281,25 @@ pp_check(y, yrep, ppc_rootogram)
 
 ```{r cov1_datagen}
 set.seed(1234)
-N <- 100
+N <- 50
+R <- 2
 k <- c(0.01, 0.1, 0.25, 0.5, 0.75)
 x <- runif(N, 0, 1)
 logit_p <- -5 + 5 * x + rnorm(N, 0, 0.5)
 p <- 1 / (1 + exp(-logit_p))
 delta <- 0.1
-for (i in 1:N)
-  y[i] <- cover_class(p[i], delta)
-ggplot(data.frame(x = x, y = y)) +
-  geom_jitter(aes(x = x, y = y), size = 2, alpha = 0.8,
-              width = 0, height = 0.05)
+y <- matrix(0, nrow = N, ncol = R)
+for (n in 1:N)
+  for (r in 1:R)
+    y[n, r] <- cover_class(p[n], delta)
+ggplot(data.frame(x = rep(x, R), y = c(y),
+                  rep = factor(rep(1:R, each = N)))) +
+  geom_jitter(aes(x = x, y = y, color = rep), size = 2, alpha = 0.8,
+              width = 0, height = 0.05) +
+  scale_y_discrete(name = "Class", limits = 1:6, breaks = as.character(1:6))
 ```
 
+<!-- Fitting -->
 
 ```{r cov1_fit, include=FALSE, cache=TRUE}
 results_file <- "fit_cov1.RData"
@@ -302,10 +308,11 @@ if (file.exists(results_file)) {
 } else {
   data <- list(N_cls = length(k) + 1,
                N = N,
+               R = R,
                X = x,
                Y = y,
                CP = k)
-  model <- cmdstan_model("cumcover2.stan")
+  model <- cmdstan_model("cover2.stan")
   fit <- model$sample(data = data,
                       num_chains = 4, num_cores = 4,
                       num_samples = 1000, num_warmup = 1000)
@@ -326,7 +333,8 @@ print(fit_cov1, pars = c("delta", "beta", "sigma"))
 
 ```{r}
 yrep <-  extract(fit_cov1, pars = "yrep")[["yrep"]]
-pp_check(y, yrep, ppc_rootogram)
+pp_check(y[, 1], yrep, ppc_rootogram)
+pp_check(y[, 2], yrep, ppc_rootogram)
 ```
 
 ## Zero-inflation
@@ -339,31 +347,36 @@ Class definition in this model
 Constant cover for all quadrats excluding 0
 
 ```{r zi_datagen, echo=FALSE}
-N <- 100
+set.seed(1234)
+N <- 50
+R <- 2
 k <- c(0.01, 0.1, 0.25, 0.5, 0.75)
 x <- runif(N, 0, 1)
-p <- 1 / (1 + exp(-(-5 + 5 * x)))
+logit_p <- -5 + 5 * x + rnorm(N, 0, 0.5)
+p <- 1 / (1 + exp(-logit_p))
 delta <- 0.1
 omega <- 0.7  # proportion on non-zero
 psi <- 0.9    # detection prob.
 
-set.seed(1234)
-y <- rep(0, N)
-for (i in 1:N) {
+y <- matrix(0, nrow = N, ncol = R)
+for (n in 1:N) {
   if (runif(1, 0, 1) < omega) { # present
-    y[i] <- cover_class(p[i], delta)
-    if (y[i] == 1 & runif(1, 0, 1) > psi)
-      y[i] <- 0
+    for (r in 1:R)
+      y[n, r] <- cover_class(p[n], delta)
+      if (y[n, r] == 1 & runif(1, 0, 1) > psi)
+        y[n, r] <- 0
   }
 }
-
 ```
 
 ## View data
 
 ```{r zi_view, echo=FALSE}
-ggplot(data.frame(y = y)) +
-  geom_bar(aes(x = y))
+ggplot(data.frame(x = rep(x, R), y = c(y),
+                  rep = factor(rep(1:R, each = N)))) +
+  geom_jitter(aes(x = x, y = y, color = rep), size = 2, alpha = 0.8,
+              width = 0, height = 0.1) +
+  scale_y_discrete(name = "Class", limits = 0:6, breaks = as.character(0:6))
 ```
 
 ## Stan code
@@ -375,50 +388,70 @@ model {
     real a = p[n] / delta - p[n];
     real b = (1 - p[n]) * (1 - delta) / delta;
 
-    if (Y[n] == 0) {
+    if (sum(Y[n]) == 0) { // Y[n]==0 for all n
       real lp[2];
       
       lp[1] = bernoulli_lpmf(0 | omega);
       lp[2] = bernoulli_lpmf(1 | omega)
-              + coverclass_lpmf(1 | CP, a, b)
-              + bernoulli_lpmf(0 | psi);
+              + coverclass_lpmf(1 | CP, a, b) * R
+              + bernoulli_lpmf(0 | psi) * R;
       target += log_sum_exp(lp);
-    } else if (Y[n] == 1) {
-      target += bernoulli_lpmf(1 | omega)
-                + coverclass_lpmf(1 | CP, a, b)
-                + bernoulli_lpmf(1 | psi);
     } else {
-      target += bernoulli_lpmf(1 | omega)
-                + coverclass_lpmf(Y[n] | CP, a, b);
+      for (r in 1:R) {
+        if (Y[n, r] == 0) {
+          target += bernoulli_lpmf(1 | omega)
+                    + coverclass_lpmf(1 | CP, a, b)
+                    + bernoulli_lpmf(0 | psi);
+        } else if (Y[n, r] == 1) {
+          target += bernoulli_lpmf(1 | omega)
+                    + coverclass_lpmf(1 | CP, a, b)
+                    + bernoulli_lpmf(1 | psi);
+        } else {
+          target += bernoulli_lpmf(1 | omega)
+                    + coverclass_lpmf(Y[n, r] | CP, a, b);
+        }
+      }
     }
   }
+  // System
+  err ~ std_normal();
+  sigma ~ normal(0, 5);
 }
 ```
 
-## Fitting
+<!-- Fitting -->
 
 ```{r zi_fitting, include=FALSE, cache=TRUE}
-data <- list(N_cls = length(k) + 1,
-             N = N,
-             X = x,
-             Y = y,
-             CP = k)
-model <- cmdstan_model("zicover.stan")
-fit <- model$sample(data = data,
-                    num_chains = 4, num_cores = 4,
-                    num_samples = 1000, num_warmup = 1000)
-fit2 <- rstan::read_stan_csv(fit$output_files())
+results_file <- "fit_zi.RData"
+if (file.exists(results_file)) {
+  load(results_file)
+} else {
+  data <- list(N_cls = length(k) + 1,
+               N = N,
+               R = R,
+               X = x,
+               Y = y,
+               CP = k)
+  model <- cmdstan_model("zicover.stan")
+  fit <- model$sample(data = data,
+                      num_chains = 4, num_cores = 4,
+                      num_samples = 1000, num_warmup = 1000)
+  fit$cmdstan_diagnose()
+  fit_zi <- rstan::read_stan_csv(fit$output_files())
+  save(fit_zi, file = results_file)
+}
 ```
 
 ## Posterior summary
 
 ```{r}
-print(fit2, pars = c("delta", "omega", "psi"))
+print(fit_zi, pars = c("delta", "omega", "psi", "beta", "sigma"))
 ```
 
 ```{r}
-yrep <-  extract(fit2, pars = "yrep")[["yrep"]]
-pp_check(y, yrep, ppc_rootogram)
+yrep <-  extract(fit_zi, pars = "yrep")[["yrep"]]
+pp_check(y[, 1], yrep, ppc_rootogram)
+pp_check(y[, 2], yrep, ppc_rootogram)
 ```
 
 
