--- a/jfs131.Rmd
+++ b/jfs131.Rmd
@@ -37,7 +37,7 @@ https://github.com/ito4303/jfs131
 
 <div class="text">
 - 被度（調査面積に対する対象植物の被覆度）は、もともとは0〜1の範囲の連続値。
-- 実際には、{'+', '0', '1', '2', '3', '4', '5'}といった階級データとして記録されることが多い。
+- 実際には、{'+', '0', '1', '2', '3', '4', '5'}などといった階級データとして記録されることが多い。
 - また、測定値は目視で決められることが多い。
 </div>
 
@@ -45,7 +45,7 @@ https://github.com/ito4303/jfs131
 
 <div class="text">
 - 順序尺度データなので、数値的な取り扱いが簡単ではない。
-- 測定誤差の問題。
+- 目視による測定では、誤差が大きいと考えられる。
 </div>
 
 # 被度のモデリング
@@ -69,6 +69,12 @@ $$
 $$
 y \sim \mathrm{Beta}\left(\frac{\mu}{\delta}-\mu,\frac{(1-\mu)(1-\delta)}{\delta}\right)
 $$
+
+<div class="text">
+$\delta$はもともと、pin-point法による被度測定における方形区内の分布相関 (Damgaard 2012) 
+
+しかし、被度測定における不確実性とも解釈可能。
+</div>
 
 ## ベータ分布($\mu$=0.5のとき) {#beta_distribution1}
 
@@ -187,9 +193,9 @@ sim_cover_prob <- function(delta = c(0.001, 0.01, 0.05, 0.1),
 <div class="text">
 今回は以下のように定義する。
 
-1: 0–0.01 (including 0), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
+1: 0–0.01 (0を含む), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
 
-$\delta$を変化させると...
+$\delta$を変化させたとき、実際の被度に対して、各被度階級が選ばれる確率を図示する。
 </div>
 
 ## $\delta$=0.001
@@ -446,10 +452,10 @@ pp_check(y[, 1], yrep, ppc_rootogram) +
 
 <div class="text">
 - このモデルでの被度
-    - 0: 0, 1: 0–0.01 (excluding 0), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
+    - 0: 0, 1: 0–0.01 (0を含まない), 2: 0.01–0.1, 3: 0.1–0.25, 4: 0.25–0.5, 5: 0.5–0.75, 6: 0.75–1
 - 分布している確率: $\omega$
 - 被度1のときの発見確率: $\psi$
-- 被度2以上のときは必ず発見できるとする。
+- 被度2以上のときは必ず発見できるとする($\psi$=1)。
 </div>
 
 ```{r zi_datagen, include=FALSE}
@@ -606,7 +612,7 @@ ggplot(df, aes(x = X, y = Y, fill = factor(class))) +
 
 ##  空間自己相関 {#autocorrelation}
 
-となりとは近い値をとる
+隣とは近い値をとる
 
 ![](Images/autocorrelation.png)
 
@@ -726,5 +732,5 @@ ggplot(df, aes(x = Prop, y = Estimate)) +
 - 階層モデリング
   - データが観測される過程
   - データの背後にあるシステム
-- 適切にモデリングすることで うまく扱える
+- 被度階級データも、適切にモデリングすることで うまく扱える
 
